--- a/client/src/pages/backoffice.css
+++ b/client/src/pages/backoffice.css
@@ -1,5 +1,4 @@
 /* Backoffice non disponible en version mobile */
-
 .backoffice {
 	display: flex;
 	min-height: 100vh;
@@ -107,4 +106,16 @@
 .backoffice-components .create-user button {
 	padding: 10px 20px;
 	font-size: 15px;
+}
+
+/* -------------------------------- */
+/* Backoffice createProducts component */
+.backoffice-components .product-form {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+}
+.backoffice-components .product-form Input {
+	flex: 1;
+	max-width: 100%;
 }
