--- a/client/src/styling/autocomplete.css
+++ b/client/src/styling/autocomplete.css
@@ -30,6 +30,9 @@
 	/* Need dropdown to overlap on caroussel */
 	z-index: 99;
 }
+.dropdown-menu:hover {
+	cursor: pointer;
+}
 .dropdown-result {
 	margin-top: 8px;
 	margin-bottom: 8px;
