--- a/client/src/styling/caroussel.css
+++ b/client/src/styling/caroussel.css
@@ -1,14 +1,23 @@
 .caroussel {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: blue;
-  padding-bottom: 20px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-bottom: 30px;
+}
+
+.caroussel h2 {
+	padding-bottom: 20px;
 }
 
 .carousselCards {
-  display: flex;
-  justify-content: space-around;
-  background-color: aquamarine;
+	display: flex;
+	justify-content: space-around;
+	background-color: lightblue;
+	padding: 15px;
+	border-radius: 10px;
+}
+
+.carrousselCard-title {
+	font-weight: 600;
 }
