Move backoffice to right beside deconnexion

--- a/client/src/containers/Header/header.css
+++ b/client/src/containers/Header/header.css
@@ -45,6 +45,7 @@ ul {
 		text-align: center;
 		-webkit-appearance: none;
 		-moz-appearance: none;
+		padding-left: 15px;
 	}
 
 	#header-right:hover {
