--- a/client/src/components/button.css
+++ b/client/src/components/button.css
@@ -1,12 +1,13 @@
 .button {
 	padding: 10px 15px;
-	background-color: lightblue;
+	background-color: var(--blue);
 	border: none;
 	border-radius: 7px;
 	margin-top: 15px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .red {
 	background-color: red;
-	color: white;
+	color: var(--white);
 	font-weight: 600;
 }
