--- a/client/src/components/carditem.css
+++ b/client/src/components/carditem.css
@@ -6,13 +6,13 @@
 }
 
 .carditem-icon {
-	background-color: white;
-	color: black;
+	background-color: var(--blue);
+	color: var(--white);
 	border-radius: 50%;
 
 	width: 20px;
 	height: 20px;
-	padding: 4px;
+	padding: 7px 7px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
