--- a/client/src/containers/BackOffice/productTags.css
+++ b/client/src/containers/BackOffice/productTags.css
@@ -5,7 +5,7 @@
 }
 .create-user-header .refresh-icon:hover {
 	cursor: pointer;
-	color: rgb(70, 148, 173);
+	color: var(--blue);
 }
 .create-user form {
 	display: flex;
