--- a/client/src/pages/account.css
+++ b/client/src/pages/account.css
@@ -1,16 +1,30 @@
 .account {
-	background-color: #f5f5f8;
+	background-size: cover; /* Adjust this property as needed */
+	background-repeat: no-repeat;
+	background-position: left bottom; /* Placer l'image en bas à gauche */
+	background-origin: content-box; /* Définir l'origine du fond au contenu */
+
+	background-image: url("https://res.cloudinary.com/deby3jois/image/upload/v1692975082/iStock-1166297134_kzldy5.jpg");
+	background-color: #7ccbea;
+}
+
+.account-inside {
 	padding: 30px;
+	padding-bottom: 130px;
 }
 
 .account h2 {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 .account-container {
 	background-color: #ceced93d;
-	margin-bottom: 20px;
+	margin-left: 30px;
+	margin-bottom: 30px;
+
 	padding: 20px;
+	padding-bottom: 30px;
 	border-radius: 8px;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .account h3 {
